<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:gravity="center"
    android:orientation="vertical"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/surname"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/name"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tv_middle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/middle_name"
        android:textSize="20sp"/>

</LinearLayout>